# Crow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.ini.example  config.mk.example  configure.ac  crow.c  crow.h  main.c
include/: client.h  commander.h  crow.h  events.h  rest.h  types.h
include/crow/: client.h  events.h  log.h  rest.h  types.h
src/: Makefile.am  client.c  commander.c  commander.h  config.c  crow.c  crow.h  events.c  log.c  rest.c  rest.h  types.c
tests/: CMakeLists.txt  main.c
